--- a/tema4/css/maquetacion-flex.html
+++ b/tema4/css/maquetacion-flex.html
@@ -154,15 +154,9 @@
 <h3 id="flexbox"><a class="header" href="#flexbox">Flexbox</a></h3>
 <p>Con <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Flexbox</a> podemos colocar los elementos con respecto a una de las dimensiones (la horizontal o la vertical), y a lo largo de esa dimensión controlar la proporción que ocupa cada elemento<sup class="footnote-reference"><a href="#1">1</a></sup>. Para ello se utiliza la propiedad <code>flex: flex-grow flex-shrink flex-basis;</code> en los elementos de un contenedor con <code>display: flex</code>:</p>
 <ul>
-<li>
-<p><code>flex-grow</code>: indica en qué proporción crecerá el elemento respecto del resto cuando sobre espacio.</p>
-</li>
-<li>
-<p><code>flex-shrink</code>: indica en qué proporción encogerá el elemento respecto del resto cuando falte espacio.</p>
-</li>
-<li>
-<p><code>flex-basis</code>: indica el tamaño inicial para el elemento antes de redistribuir el espacio.</p>
-</li>
+<li><code>flex-grow</code>: indica en qué proporción crecerá el elemento respecto del resto cuando sobre espacio.</li>
+<li><code>flex-shrink</code>: indica en qué proporción encogerá el elemento respecto del resto cuando falte espacio.</li>
+<li><code>flex-basis</code>: indica el tamaño inicial para el elemento antes de redistribuir el espacio.</li>
 </ul>
 <div class="codepen" data-prefill data-height="350" data-theme-id="light" data-default-tab="css,result" data-editable="true" style="opacity:0">
 <pre data-lang="html">&lt;body>
