--- a/tema5/js/js.html
+++ b/tema5/js/js.html
@@ -150,7 +150,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="javascript"><a class="header" href="#javascript">JavaScript</a></h1>
-<p>Es el lenguaje de programación nativo de los navegadores web<sup class="footnote-reference"><a href="#1">1</a></sup>. Es <a href="../../tema1/paradigmas/paradigmas.html">multi-paradigma</a>, interpretado, ejecutado en un solo hilo y basado en eventos. ECMAScript es su especificación que está en permanente evolución<sup class="footnote-reference"><a href="#2">2</a></sup>.</p>
+<p>Es el lenguaje de programación nativo de los navegadores web<sup class="footnote-reference"><a href="#1">1</a></sup>. Es <a href="../../tema1/paradigmas/paradigmas.html">multi-paradigma</a>, interpretado, ejecutado en un solo hilo y basado en eventos<sup class="footnote-reference"><a href="#2">2</a></sup>. ECMAScript es su especificación que está en permanente evolución<sup class="footnote-reference"><a href="#3">3</a></sup>.</p>
 <h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
 <ul>
 <li>
@@ -170,6 +170,9 @@
 <p>También se usa como lenguaje de lado servidor con <a href="https://nodejs.org/en/">NodeJS</a>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p>Este modelo de ejecución está implementado con un <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/EventLoop">bucle de eventos</a>.</p>
+</div>
+<div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
 <p>Como consecuencia no todos los navegadores soportan las nuevas características. De ahí que existan herramientas como <a href="https://babeljs.io/docs/en/index.html">Babel</a> que convierten el código para que sea compatible con los navegadores más usados.</p>
 </div>
 
