--- a/tema5/js/tipos-arrays.html
+++ b/tema5/js/tipos-arrays.html
@@ -158,7 +158,7 @@ array[0] = '1er elemento modificado';
 array.push('elemento nuevo añadido al final');
 
 console.log('Longitud del array:', array.length);
-console.log('Contenido de todo el array:', objeto);
+console.log('Contenido de todo el array:', array);
 </code></pre>
 <blockquote>
 <p>⁉️ <strong>Ejercicio 1:</strong> <em>Copia y pega el código anterior en la consola JavaScript. Intenta leer la posición 10 del array. Asigna un valor a dicha posición, y mira de nuevo la longitud del array.</em></p>
