--- a/tema5/js/tipos-objetos.html
+++ b/tema5/js/tipos-objetos.html
@@ -169,10 +169,10 @@ console.log('Campo anidado:', objeto.campoObjeto.campoCadena);
 console.log('Contenido de todo el objeto:', objeto);
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio 1:</strong> <em>Copia y pega el código anterior en la consola JavaScript. Intenta leer el campo <code>campoObjeto.otroObjeto.noExisto</code>. Luego intenta leer este otro <code>campoObjeto.otroObjeto.noExisto.tampocoExisto</code>.</em></p>
+<p>⁉️ <strong>Ejercicio 1:</strong> <em>Copia y pega el código anterior en la consola JavaScript. Intenta leer el campo <code>objeto.campoObjeto.noExisto</code>. Luego intenta leer este otro <code>objeto.campoObjeto.noExisto.tampocoExisto</code>.</em></p>
 </blockquote>
 <blockquote>
-<p>⁉️ <strong>Ejercicio 2:</strong> <em>Asigna al <code>campoObjeto.otroObjeto</code> otro objeto creado así: <code>const objeto2 = {campo: 1}</code>. Luego cambia el valor del campo del <code>objeto2</code> y observa qué ocurre con el contenido del primer objeto.</em></p>
+<p>⁉️ <strong>Ejercicio 2:</strong> <em>Asigna al <code>objeto.campoObjeto.otroObjeto</code> otro objeto creado así: <code>const objeto2 = {campo: 1}</code>. Luego cambia el valor del campo del <code>objeto2</code> y observa qué ocurre con el contenido del primer objeto.</em></p>
 </blockquote>
 <blockquote>
 <p>⁉️ <strong>Ejercicio 3:</strong> <em>Utilizando los métodos del objeto <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON#static_methods"><code>JSON</code></a> de JavaScript:</em></p>
