--- a/tema3/html/prerrequisitos.html
+++ b/tema3/html/prerrequisitos.html
@@ -158,7 +158,7 @@
 <p>🔍 <strong>Nota:</strong> <em>Estos mismos prerrequisitos aplican a los temas de CSS y JavaScript.</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>Puedes ver un ejemplo de configuración en la sección sobre <a href="/intro/git/cd.html">despliegue en Github</a> del tema de Git.</p>
+<p>Puedes ver un ejemplo de configuración en la sección sobre <a href="../../intro/git/cd.html">despliegue en Github</a> del tema de Git. Solo cambiará el nombre de tu repo en lugar del <code>ci-cd</code> indicado en esos pasos.</p>
 </div>
 
                     </main>
