--- a/tema4/css/maquetacion-grid.html
+++ b/tema4/css/maquetacion-grid.html
@@ -152,7 +152,13 @@
                         <h1 id="css"><a class="header" href="#css">CSS</a></h1>
 <h2 id="maquetación"><a class="header" href="#maquetación">Maquetación</a></h2>
 <h3 id="grid"><a class="header" href="#grid">Grid</a></h3>
-<p>Para diseños que requieren colocar elementos en ambas dimensiones es más sencillo utilizar <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">Grid</a>. Se trata de colocar los elementos en la cuadrícula definida en el contenedor. El tamaño de las filas y columnas se puede definir proporcionalmente al espacio disponible con la unidad <code>fr</code>. Existen muchas formas de definir la cuadrícula, a continuación vemos un ejemplo que utiliza nombres de áreas.</p>
+<p>Para diseños que requieren colocar elementos en ambas dimensiones es más sencillo utilizar <a href="https://css-tricks.com/snippets/css/complete-guide-grid/">Grid</a>. Se activa con <code>display: grid</code> en el contenedor. </p>
+<p>Se trata de colocar los elementos en la cuadrícula definida en el contenedor. Existen muchas formas de definir la cuadrícula, a continuación vemos un ejemplo que utiliza nombres de áreas:</p>
+<ul>
+<li>Con la propiedad <code>grid-template-columns</code> en el contenedor, se definen las proporciones de las columnas<sup class="footnote-reference"><a href="#1">1</a></sup>.</li>
+<li>Con la propiedad <code>grid-template-areas</code> en el contenedor, se definen las áreas disponibles en la cuadrícula.</li>
+<li>Con la propiedad <code>grid-area</code> en el elemento a colocar, se le asigna a una de las áreas indicadas en la propiedad anterior.</li>
+</ul>
 <div class="codepen" data-prefill data-height="350" data-theme-id="light" data-default-tab="css,result" data-editable="true" style="opacity:0">
   <pre data-lang="html">&lt;body>
   &lt;header class="cabecera">Cabecera&lt;/header>
@@ -201,6 +207,9 @@ body * {
 <blockquote>
 <p>⁉️ <strong>Ejercicio:</strong> <em>Estudia la CSS y el diseño para añadir un índice a la derecha del contenido.</em></p>
 </blockquote>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p>Utiliza la unidad <code>fr</code> para definir el ancho de las columnas proporcionalmente al espacio disponible. En vez de columnas, se puede definir la altura de las filas pero usando <code>grid-template-rows</code>.</p>
+</div>
 
                     </main>
 
