--- a/tema4/css/responsive-unidades.html
+++ b/tema4/css/responsive-unidades.html
@@ -161,13 +161,13 @@
   <pre data-lang="html">&lt;body>
 &lt;section class="relativas">
   &lt;aside class="flota">&lt;/aside>
-  &lt;p>Este contenedor está utilizando unidades &lt;strong>rem&lt;/strong> para definir los tamaños de letras, márgenes, paddings, altos y anchos.&lt;/p>
+  &lt;p>Este contenedor está utilizando unidades &lt;strong>em&lt;/strong> para definir los tamaños de letras, márgenes, paddings, altos y anchos.&lt;/p>
   &lt;p>Si reconfiguramos el tamaño de la fuente, este contenedor modifica sus tamaños en la misma proporción. Cuando esta página se vea en pantallas o muy grandes o muy pequeñas, puede ser interesante cambiar esas proporciones para mejorar la legibilidad y el uso. Por ejemplo, aumentar el tamaño de un botón para que sea más fácil pulsarlo.&lt;/p>
 &lt;/section>
 &lt;section class="pixels">
   &lt;aside class="flota">&lt;/aside>
   &lt;p>Este contenedor está utilizando unidades de &lt;strong>píxeles&lt;/strong> para definir los tamaños de letras, márgenes, paddings, altos y anchos.&lt;/p>
-  &lt;p>Si reconfiguramos el tamaño de la fuente, este contenedor permanece igual con las mismas dimensiones. Eso puede ser interesante cuando se diseña la página para una resolución fija. Pero si esta página se viera en una pantalla pequeña puede que el los botones no sean lo suficientemente grandes para pulsarlos con facilidad.&lt;/p>
+  &lt;p>Si reconfiguramos el tamaño de la fuente, este contenedor permanece igual con las mismas dimensiones. Eso puede ser interesante cuando se diseña la página para una resolución fija. Pero si esta página se viera en una pantalla pequeña puede que los botones no sean lo suficientemente grandes para pulsarlos con facilidad.&lt;/p>
 &lt;/section>
 &lt;/body></pre>
   <pre data-lang="css">html {
@@ -176,20 +176,20 @@
 }
 .relativas .flota {
   float: left;
-  width: 5rem;
-  height: 9rem;
+  width: 5em;
+  height: 9em;
   background-color: green;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
+  margin-right: 1em;
+  margin-bottom: 1em;
 }
 .relativas {
-  width: 20rem;
+  width: 20em;
   border: 5px solid gray;
-  padding: 1rem;
-  margin: 1rem;
+  padding: 1em;
+  margin: 1em;
 }
 .relativas p {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1em 0;
 }
 .pixels .flota {
   float: left;
@@ -209,14 +209,15 @@
   margin: 0 0 16px 0;
   font-size: 16px;
 }</pre></div>
-<ol>
-<li>
-<p>La propiedad <code>font-size</code> nos permite reconfigurar las proporciones del primer contenedor fácilmente, pero no del segundo. Ahora está al 100%, lo que indica que se está usando el valor por defecto de este navegador (o el configurado por el usuario). Manualmente, vamos a ponerlo a <code>font-size: 75%;</code> simulando lo que haría una media query en determinadas condiciones.</p>
-</li>
-<li>
-<p>Para ver cómo funciona la unidad <code>em</code> vamos a poner en el contenedor <code>relativas</code> un tamaño de fuente diferente: <code>font-size: 0.5rem;</code>. Como los elementos hijos usan <code>rem</code> siguen con las mismas dimensiones, pero sus textos han heredado el nuevo tamaño de fuente definido en el padre. Para que el diseño mantenga la proporción correcta, cambia los <code>rem</code> por <code>em</code> en todos sus elementos hijos.</p>
-</li>
-</ol>
+<p>En el ejemplo anterior, la propiedad <code>font-size</code> nos permite reconfigurar las proporciones del primer contenedor fácilmente, pero no del segundo. Ahora está al 100%, lo que indica que se está usando el valor por defecto de este navegador (o el configurado por el usuario). Añade la siguiente media query para ver lo fácil que es cambiar sus proporciones en caso de necesidad:</p>
+<pre><code class="language-css">@media (max-width: 30rem) {
+  .relativas { font-size: 50%; }
+}
+</code></pre>
+<p>Para ver la utilidad de lo anterior, vamos a ver lo que implicaría cambiar el segundo contenedor para ajustar sus proporciones a la mitad como hemos hecho con el primero.</p>
+<blockquote>
+<p>⁉️ <strong>Ejercicio:</strong> <em>Las reglas CSS del segundo contenedor utilizan la clase <code>pixels</code>. Cambia primero su <code>font-size</code> a <code>8px</code> para ver como sus proporciones se desajustan solo con el cambio del tamaño de fuente. Luego modifica el resto de sus propiedades con la mitad de píxeles.</em></p>
+</blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Otra unidad relativa ampliamente utilizada es <code>%</code>: porcentaje relativo a la misma propiedad en el elemento padre. Por ejemplo, un elemento con <code>font-size: 50%;</code> tendrá un tamaño de letra la mitad de pequeño que el de su padre.</p>
 </div>
