--- a/tema5/js/js.html
+++ b/tema5/js/js.html
@@ -170,7 +170,7 @@
 <p>También se usa como lenguaje de lado servidor con <a href="https://nodejs.org/en/">NodeJS</a>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>Este modelo de ejecución está implementado con un <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/EventLoop">bucle de eventos</a>.</p>
+<p>Este modelo de ejecución está implementado con un <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/EventLoop">bucle de eventos</a>. En el siguiente diagrama se muestra un ejemplo de ejecución del evento &quot;click&quot; y su &quot;operación&quot; asociada: <details><summary><i class="fa fa-picture-o" aria-hidden="true"></i></summary><br><object type="image/svg+xml" data="./files/event-loop.excalidraw.svg" width="50%"></object></details></p>
 </div>
 <div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
 <p>Como consecuencia no todos los navegadores soportan las nuevas características. De ahí que existan herramientas como <a href="https://babeljs.io/docs/en/index.html">Babel</a> que convierten el código para que sea compatible con los navegadores más usados.</p>
