deploy: 8efed02edc1de9bb48073fa3f8d94a3494931827

--- a/tema5/js/apis-dom.html
+++ b/tema5/js/apis-dom.html
@@ -163,7 +163,7 @@ console.log('HTML del 1er elemento del 4to elemento del body:',
             document.body.childNodes[3].childNodes[0].innerHTML);
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio:</strong> <em>En el siguiente Codepen, haz que se muestre el elemento del DOM del &quot;Menú 2&quot; usando una alerta. Ojo, que el DOM también considera como elementos los comentarios, los textos y retornos de carro que hay entre los elementos.</em></p>
+<p>⁉️ <strong>Ejercicio:</strong> <em>En el siguiente Codepen, muestra el elemento del DOM del &quot;Menú 2&quot; usando una alerta. Ojo, que el DOM también considera como elementos los comentarios, los textos y retornos de carro que hay entre los elementos.</em></p>
 </blockquote>
 <div class="codepen" data-prefill data-height="350" data-theme-id="light" data-default-tab="js,html" data-editable="true" style="opacity:0">
   <pre data-lang="html">&lt;body>
