--- a/print.html
+++ b/print.html
@@ -2136,11 +2136,11 @@ p {
   display: none;
   list-style: none;
   padding: 0;
-  background: royalblue;
+  background: dodgerblue;
   position: ?
 }
 .submenu &gt; li:? {
-  background: dodgerblue;
+  background: royalblue;
 }
 .contenedor &gt; li:? &gt; .submenu {
   display: block;
@@ -2914,17 +2914,16 @@ console.log(objetoConSuma.suma(&quot;¡Hola &quot;, &quot;Mundo!&quot;));
 </code></pre>
 <h3 id="funciones-flecha"><a class="header" href="#funciones-flecha">Funciones flecha</a></h3>
 <p>Las funciones se pueden pasar como parámetros o devolverse como resultado de otra función. En esos casos se suele usar la sintaxis &quot;flecha&quot; que es más escueta<sup class="footnote-reference"><a href="#1">1</a></sup>:</p>
-<pre><code class="language-js">const funcionSuma = function funcionSuma(param1, param2) {
-  return () =&gt; param1 + param2;
-}
-const ejecutaConDemora = function ejecutaConDemora(funcion, demora) {
-  const pintaDemoraYejecuta = () =&gt; console.log(`Ejecuto demorado ${demora / 1000}s:`, funcion());
-  setTimeout(pintaDemoraYejecuta, demora);
-};
-ejecutaConDemora(funcionSuma(1, 2), 5000);
+<pre><code class="language-js">// Misma función que el ejemplo anterior:
+const suma = (param1, param2) =&gt; param1 + param2;
+// Aquí, creamos una función y la pasamos como 1er parámetro en una sola línea:
+setTimeout(
+  () =&gt; console.log('Resultado:', suma(1, 2)), 
+  5000
+);
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio:</strong> <em>Copia y pega el código anterior en la consola JavaScript. Familiarízate con su funcionamiento. Consulta también la documentación de <a href="https://developer.mozilla.org/en-US/docs/Web/API/setTimeout"><code>setTimeout</code></a>. Ahora, sin modificar el código anterior, obtén la <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date">fecha</a> actual y la fecha demorada 10s utilizando <code>ejecutaConDemora</code>.</em></p>
+<p>⁉️ <strong>Ejercicio:</strong> <em>Utilizando <a href="https://developer.mozilla.org/en-US/docs/Web/API/setTimeout"><code>setTimeout</code></a>, obtén la <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date">fecha</a> fecha dentro de 5s.</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Esa sintaxis tiene más peculiaridades que puedes consultar en la web de <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">Mozilla</a>.</p>
@@ -3014,7 +3013,7 @@ console.log(array != ['a']);
 <p>JavaScript tiene los típicos bucles <code>for</code> y <code>while</code> para iterar. El más usado es el primero:</p>
 <pre><code class="language-js">const array = []
 for (let i = 0; i &lt; 10; i++) {
-  myArray.push(i)
+  array.push(i);
 }
 
 console.log(array);
@@ -3152,7 +3151,7 @@ console.log('HTML del 1er elemento del 4to elemento del body:',
             document.body.childNodes[3].childNodes[0].innerHTML);
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio:</strong> <em>En el siguiente Codepen, haz que se muestre el elemento del DOM del &quot;Menú 2&quot; usando una alerta. Ojo, que el DOM también considera como elementos los comentarios, los textos y retornos de carro que hay entre los elementos.</em></p>
+<p>⁉️ <strong>Ejercicio:</strong> <em>En el siguiente Codepen, muestra el elemento del DOM del &quot;Menú 2&quot; usando una alerta. Ojo, que el DOM también considera como elementos los comentarios, los textos y retornos de carro que hay entre los elementos.</em></p>
 </blockquote>
 <div class="codepen" data-prefill data-height="350" data-theme-id="light" data-default-tab="js,html" data-editable="true" style="opacity:0">
   <pre data-lang="html">&lt;body>
@@ -3218,7 +3217,7 @@ console.log('Después de manipular:', webApis);
 <blockquote>
 <p>⁉️ <strong>Ejercicio:</strong> <em>En el siguiente Codepen, modifica el código de la función JS <code>actualizar</code> para que modifique los elementos <code>titulo</code> y <code>mensaje</code> del HTML via DOM con el contenido del mensaje <code>nuevoMensaje</code>.</em></p>
 </blockquote>
-<div class="codepen" data-height="350" data-theme-id="light" data-default-tab="js,result" data-editable="true" style="opacity:0" data-prefill='{"stylesheets":["https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css","https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"]}'>
+<div class="codepen" data-height="360" data-theme-id="light" data-default-tab="js,result" data-editable="true" style="opacity:0" data-prefill='{"stylesheets":["https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css","https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"]}'>
   <pre data-lang="html">&lt;body>
 &lt;div class="card">
   &lt;div class="card-header">Mensajes&lt;/div>
@@ -3339,7 +3338,7 @@ tituloWebApis.hidden = true;
 <li>
 <p>O, asignándola a ese atributo pero utilizando el API del DOM:</p>
 <pre><code class="language-js">const boton = document.getElementById('boton');
-const meHanPulsado = (event) =&gt; { boton.textContent = `Click nº ${event.detail}` };
+const meHanPulsado = (event) =&gt; boton.textContent = `Click nº ${event.detail}`;
 boton.onclick = meHanPulsado;
 </code></pre>
 </li>
