--- a/tema5/js/sintaxis-bucles.html
+++ b/tema5/js/sintaxis-bucles.html
@@ -155,7 +155,7 @@
 <p>JavaScript tiene los típicos bucles <code>for</code> y <code>while</code> para iterar. El más usado es el primero:</p>
 <pre><code class="language-js">const array = []
 for (let i = 0; i &lt; 10; i++) {
-  myArray.push(i)
+  array.push(i);
 }
 
 console.log(array);
