--- a/tema5/js/tipos-funciones.html
+++ b/tema5/js/tipos-funciones.html
@@ -164,17 +164,16 @@ console.log(objetoConSuma.suma(&quot;¡Hola &quot;, &quot;Mundo!&quot;));
 </code></pre>
 <h3 id="funciones-flecha"><a class="header" href="#funciones-flecha">Funciones flecha</a></h3>
 <p>Las funciones se pueden pasar como parámetros o devolverse como resultado de otra función. En esos casos se suele usar la sintaxis &quot;flecha&quot; que es más escueta<sup class="footnote-reference"><a href="#1">1</a></sup>:</p>
-<pre><code class="language-js">const funcionSuma = function funcionSuma(param1, param2) {
-  return () =&gt; param1 + param2;
-}
-const ejecutaConDemora = function ejecutaConDemora(funcion, demora) {
-  const pintaDemoraYejecuta = () =&gt; console.log(`Ejecuto demorado ${demora / 1000}s:`, funcion());
-  setTimeout(pintaDemoraYejecuta, demora);
-};
-ejecutaConDemora(funcionSuma(1, 2), 5000);
+<pre><code class="language-js">// Misma función que el ejemplo anterior:
+const suma = (param1, param2) =&gt; param1 + param2;
+// Aquí, creamos una función y la pasamos como 1er parámetro en una sola línea:
+setTimeout(
+  () =&gt; console.log('Resultado:', suma(1, 2)), 
+  5000
+);
 </code></pre>
 <blockquote>
-<p>⁉️ <strong>Ejercicio:</strong> <em>Copia y pega el código anterior en la consola JavaScript. Familiarízate con su funcionamiento. Consulta también la documentación de <a href="https://developer.mozilla.org/en-US/docs/Web/API/setTimeout"><code>setTimeout</code></a>. Ahora, sin modificar el código anterior, obtén la <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date">fecha</a> actual y la fecha demorada 10s utilizando <code>ejecutaConDemora</code>.</em></p>
+<p>⁉️ <strong>Ejercicio:</strong> <em>Utilizando <a href="https://developer.mozilla.org/en-US/docs/Web/API/setTimeout"><code>setTimeout</code></a>, obtén la <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date">fecha</a> fecha dentro de 5s.</em></p>
 </blockquote>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Esa sintaxis tiene más peculiaridades que puedes consultar en la web de <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">Mozilla</a>.</p>
