--- a/src/tema3/html/files/encoding-1.html
+++ b/src/tema3/html/files/encoding-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="windows-1252" />
+    <meta charset="windows-1252">
     <title>1</title>
   </head>
   <body>
