--- a/tema5/js/apis.html
+++ b/tema5/js/apis.html
@@ -198,6 +198,9 @@
 </code></pre>
 </li>
 </ol>
+<blockquote>
+<p>🔍 <strong>Nota:</strong> <em>Para depurar el código JS: botón derecho <code>➜</code> Inspeccionar <code>➜</code> Depurador o Sources. Selecciona el fichero con el código JS en el árbol de ficheros de la izquierda. Para añadir un punto de ruptura y que la ejecución se pare, marca uno de los números de línea del fichero abierto. Recarga la página si esa línea se ejecutó al cargar la página.</em></p>
+</blockquote>
 
                     </main>
 
