--- a/tema5/js/apis-eventos.html
+++ b/tema5/js/apis-eventos.html
@@ -152,13 +152,14 @@
                         <h1 id="javascript"><a class="header" href="#javascript">JavaScript</a></h1>
 <h2 id="web-apis"><a class="header" href="#web-apis">Web APIs</a></h2>
 <h3 id="eventos"><a class="header" href="#eventos">Eventos</a></h3>
-<p>Siempre que el usuario interactúa con los elementos HTML de la página, se disparan eventos que pueden ser capturados mediante JavaScript para dar comportamiento a la aplicación web. Cada API tiene sus propios <a href="https://developer.mozilla.org/en-US/docs/Web/Events">eventos</a>, aquí vamos a ver los básicos relacionados con la interacción del ratón y el teclado sobre los elementos HTML:</p>
+<p>Siempre que el usuario interactúa con los elementos HTML de la página, se disparan eventos que pueden ser capturados mediante JavaScript para dar comportamiento a la aplicación web. A continuación, veremos los básicos relacionados con la interacción del ratón y el teclado sobre los elementos HTML:</p>
 <ul>
 <li><code>click</code></li>
 <li><code>change</code></li>
 <li><code>keyup</code></li>
 <li><code>submit</code></li>
 </ul>
+<p>Hay muchas más clases de eventos, no todos relacionados con la interacción del usuario. Cada API tiene sus propios <a href="https://developer.mozilla.org/en-US/docs/Web/Events">eventos</a>. Por ejemplo, el evento <code>load</code> se dispara cuando la página se ha cargado completamente (y todos los elementos están disponibles en el DOM), el <code>unload</code> antes de abandonar la página, etc.</p>
 
                     </main>
 
